# src/modules/admin/types/userDetails/userType.ts
@@ -1,7 +1,13 @@
+import type { UserType } from "@/api/generated";
+
 // types/user.types.ts
 export interface UserForm {
-    name: string;
-    position: string;
+    id?: string;
+    username?: string | null;
+    password?: string | null | undefined;
+    email?: string | null;
+    userType?: UserType;
+    isActive?: boolean;
 }
 
 export type UserErros = Record<string, string>;
