# src/modules/auth/types/AuthState.ts
@@ -1,8 +1,10 @@
+import type { UserType } from "@/api/generated";
+
 export interface AuthState {
     user: {
         id: string | null;
         username: string | null;
-        userType: string | null;
+        userType: UserType | null;
     } | null;
     isAuthenticated: boolean;
     isLoading: boolean;
